ChangeLog for RQL
=================

 --
    * fix undoing of add_relation and variable name allocation on query using
      some subquery
    * add missing selected_index() method on ColumnAlias
	
2008-08-07  --  0.19.1
    * should not simplify variables used in the GROUPBY clause when there is a
      HAVING clause

    * implements set_limit / set_offset on UNION nodes



2008-07-22  --  0.19.0
    * grammar changes: LIMIT / OFFSET should now be before the WHERE clause,
      though bw compat will be kept for some time

    * when simplifying constant uid nodes, don't remove them from group terms if
      there is a HAVING clause

    * new get_variable_variables on Union and Select nodes



2008-07-04  --  0.18.3
    * fix add_type_restriction to support frozenset and dict of types



2008-06-06  --  0.18.2
    * remove group/sort undoing fix

    * set stinfo['possibletypes'] and update solution dictionnary for variable
      inserted for new identity relation

    * error resilient unregister_reference

    * init variable annotation information on annotation, not variable
      instanciation



2008-05-12  --  0.18.1
    * bugfix in remove_groups and remove_sort_terms



2008-05-08  --  0.18.0
    * UNION support

    * HAVING support

    * GROUPBY and ORDERBY moved *before* WHERE

    * code cleanup, fixes and refactorings



2008-03-26  --  0.17.2
    * fix a bug in get_solutions,possible_types should be reseted first

    * some documentation update



2008-03-12  --  0.17.1
    * method to add group variable with undoing support

    * fix remove_sort_term



2008-02-27  --  0.17.0
    * use bool values for Boolean constants, None for NULL constant

    * allow one char relation names

    * allow multiple capitalized characters in entity types



2008-02-15  --  0.16.0
    * understand "C is NULL"

    * allow multiple annotation

    * fix stinfo['possibletypes']



2008-01-25  --  0.15.4
    * better add_type_restriction methods
