@@ -319,16 +319,15 @@ class AnalyzerClassTest(TestCase):
         self.assertEqual(sols, [{'X': 'Person',
                                  'U': 'Person'}])
 
-    def test_subqueries(self):
+    def test_subqueries_base(self):
         node = self.helper.parse('Any L, Y, F WHERE Y located L '
                                  'WITH Y,F BEING ((Any X,F WHERE X is Person, X firstname F) '
                                  'UNION (Any X,F WHERE X is Company, X name F))')
         self.helper.compute_solutions(node, debug=DEBUG)
-        sols = sorted(node.children[0].solutions)
-        self.assertEqual(node.children[0].with_[0].query.children[0].solutions, [{'X': 'Person',
-                                                                            'F': 'String'}])
-        self.assertEqual(node.children[0].with_[0].query.children[1].solutions, [{'X': 'Company',
-                                                                            'F': 'String'}])
+        self.assertEqual(node.children[0].with_[0].query.children[0].solutions,
+                         [{'X': 'Person', 'F': 'String'}])
+        self.assertEqual(node.children[0].with_[0].query.children[1].solutions,
+                         [{'X': 'Company', 'F': 'String'}])
         sols = sorted(node.children[0].solutions)
         self.assertEqual(sols, [{'Y': 'Company', 'L': 'Address',
                                  'F': 'String'},
@@ -344,6 +343,23 @@ class AnalyzerClassTest(TestCase):
         self.assertEqual(node.children[0].with_[0].query.children[0].solutions, [{'X': 'Person'}])
         self.assertEqual(node.children[0].solutions, [{'X': 'Person', 'Y': 'Person',
                                                        'L': 'Address'}])
+
+    def test_subqueries_outer_filter_type(self):
+        # this kind of query may be generated by erudi's facettes box
+        node = self.helper.parse('Any L, Y, F WHERE Y located L, Y is Person '
+                                 'WITH Y,F BEING ((Any X,F WHERE X is Person, X firstname F) '
+                                 'UNION (Any X,F WHERE X is Company, X name F))')
+        self.helper.compute_solutions(node, debug=DEBUG)
+        sols = sorted(node.children[0].solutions)
+        self.assertEqual(sols, [{'Y': 'Person', 'L': 'Address',
+                                 'F': 'String'}])
+        self.assertEqual(node.children[0].with_[0].query.children[0].solutions,
+                         [{'X': 'Person', 'F': 'String'}])
+        # auto-simplification
+        self.assertEqual(len(node.children[0].with_[0].query.children), 1)
+        self.assertEquals(node.as_string(), 'Any L,Y,F WHERE Y located L, Y is Person WITH Y,F BEING (Any X,F WHERE X is Person, X firstname F)')
+        self.assertEqual(node.children[0].with_[0].query.children[0].solutions,
+                         [{'X': 'Person', 'F': 'String'}])
 
     def test_insert(self):
         node = self.helper.parse('INSERT Person X : X name "toto", X work_for Y WHERE Y name "logilab"')
